force-app/main/default/objects/CC_Learner__c/CC_Learner__c.object-meta.xml
<CustomObject>
    <description>An individual who participates in training, typically an employee of a client Account. / 研修に参加する個人（主に取引先企業の社員）。</description>
    <label>Learner</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>