force-app/main/default/objects/CC_Learner__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>The Account this learner belongs to. / 受講者が所属する取引先。</description>
    <inlineHelpText>Select the Account this learner belongs to. / 所属する取引先を選択してください。</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Learners</relationshipLabel>
    <relationshipName>Learners</relationshipName>
    <type>MasterDetail</type>
</CustomField>