force-app/main/default/objects/CC_Learner__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <description>Age calculated automatically from date of birth. / 生年月日から自動計算される年齢。</description>
    <inlineHelpText>自動計算のため入力不要（Automatically calculated; no input needed）。</inlineHelpText>
    <label>Age</label>
    <formula>FLOOR((TODAY() - Birthday__c) / 365.2425)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>