force-app/main/default/objects/CC_Learner__c/fields/Birthday__c.field-meta.xml
<CustomField>
    <fullName>Birthday__c</fullName>
    <description>The learner's date of birth. / 受講者の生年月日。</description>
    <inlineHelpText>Enter the date of birth. / 生年月日を入力してください。</inlineHelpText>
    <label>Birthday</label>
    <type>Date</type>
</CustomField>