force-app/main/default/objects/CC_Learner__c/fields/CareerOrientations__c.field-meta.xml
<CustomField>
    <fullName>CareerOrientations__c</fullName>
    <description>The learner's career orientation(s). / 受講者のキャリア志向。</description>
    <inlineHelpText>Select all applicable career orientations. / 該当するキャリア志向をすべて選択してください。</inlineHelpText>
    <label>Career Orientations</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>Stability</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>Growth</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>Work-Life Balance</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>Promotion</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>Management-Oriented</label>
            </value>
            <value>
                <fullName>06</fullName>
                <label>Professional</label>
            </value>
            <value>
                <fullName>07</fullName>
                <label>Freedom</label>
            </value>
            <value>
                <fullName>08</fullName>
                <label>Social Contribution</label>
            </value>
            <value>
                <fullName>09</fullName>
                <label>Undecided</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Creative</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Project-Oriented</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Global</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>Entrepreneurship</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>