force-app/main/default/objects/CC_Learner__c/fields/IsTestRecord__c.field-meta.xml
<CustomField>
    <fullName>IsTestRecord__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this record was created for testing/experimentation rather than a real business scenario. / このレコードがテスト・実験目的で作成されたものかどうか（本来の業務シナリオデータではないことを示す）。</description>
    <inlineHelpText>Check if this record is for testing/experimentation, not part of a real scenario. / テスト・実験目的で作成したレコードの場合はチェックしてください。</inlineHelpText>
    <label>Test Record</label>
    <type>Checkbox</type>
</CustomField>