force-app/main/default/objects/CC_Learner__c/fields/NumberOfCareerChanges__c.field-meta.xml
<CustomField>
    <fullName>NumberOfCareerChanges__c</fullName>
    <description>Number of times the learner has changed jobs. / 転職の回数。</description>
    <inlineHelpText>Enter the number of job changes. / 転職回数を入力してください。</inlineHelpText>
    <label>Number of Career Changes</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>