force-app/main/default/objects/CC_Learner__c/fields/YearsOfProfessionalExperience__c.field-meta.xml
<CustomField>
    <fullName>YearsOfProfessionalExperience__c</fullName>
    <description>Total years of professional work experience. / 正社員・契約・派遣・嘱託等の経験総年数。</description>
    <inlineHelpText>Enter total years of work experience. / 通算の職務経験年数を入力してください。</inlineHelpText>
    <label>Years of Professional Experience</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>